# spotify-api-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  account.c  app.js  config.c  config.h  constants.h  diff.c  diff.h  index.js  json.c  json.h  libspotify.js  main.c  package.json  server.c  server.h
cmake/: FindSubversionLibrary.cmake
ffi/: libspotify.js
lib/: libspotify.js
